one more round of refactor

--- a/static/md/1.1_Installation.md
+++ b/static/md/1.1_Installation.md
@@ -12,27 +12,33 @@ class: left
 
 * Install 
 
-```bash
-$ curl https://sh.rustup.rs -sSf | sh
-```
+    ```bash
+    $ curl https://sh.rustup.rs -sSf | sh
+    ```
 
 * Updating
 
-```bash
-$ rustup update
-```
+    ```bash
+    $ rustup update
+    ```
 
 * Uninstall
 
-```bash
-$ rustup self uninstall
-```
+    ```bash
+    $ rustup self uninstall
+    ```
 
-* Troubleshoot
+* Version
 
-```bash
-$ rustc --version
-```
+    ```bash
+    $ rustc --version
+    ```
+
+* Local documentation
+
+    ```bash
+    $ rustup doc
+    ```
 
 ---
 class: left
@@ -41,4 +47,4 @@ class: left
 
 * rustc - is the compiler
 
-* rustup - install, upate and uninstall rustc
+* rustup - helps install, update and uninstall rustc
