--- a/static/md/1.2_Hello_World.md
+++ b/static/md/1.2_Hello_World.md
@@ -10,28 +10,30 @@ class: left
 
 # First program
 
+Create folders
+
 ```bash
 $ mkdir ~/projects
 $ cd ~/projects
 $ mkdir hello_world
 $ cd hello_world
 ```
+
+In **main.rs** write...
+
 ```rust
 fn main() {
   println!("Hello, world!");
 }
 ```
 
-Create folders and in **main.rs** code hello world!
-
+Execute
 
 ```bash
 $ rustc main.rs
 $ ./main
 Hello, world!
 ```
-
-Execute
 
 ---
 class: left
@@ -55,15 +57,17 @@ fn main() {
 ---
 class: left
 
+# Anatomy of a Rust Program
+
 ```rust
 println!("Hello, world!");
 ```
 
-* prints text to the screen
+* `println!` prints text to screen
 
 * `!` indicates that `println!` is a macro
 
-* "Hello, World!" is a string
+* `"Hello, World!"` is a string literal
 
 * line ends with a `;`
 
@@ -72,38 +76,42 @@ class: left
 
 # Compiling and Running Are Separate Steps
 
-* Rust is a ahead of time compiled language
+Rust is a ahead of time compiled language
 
-```bash
-$ rustc main.rs
-```
+* Compiles the program
 
-Compiles the program and generates `main`
+  ```bash
+  $ rustc main.rs
+  ```
 
-```bash
-$ ./main
-```
+* Run the program 
 
-Run the program 
+  ```bash
+  $ ./main
+  ```
 
 ---
 class: left
 
 # Hello, Cargo!
 
-
 ```bash
 $ cargo --version
 ```
 
-Installed along with Rust
-
 * Cargo takes care of 
+
+  * Creating projects
+
   * building your code 
+
   * downloading the libraries your code depends on
+
   * building those libraries
 
-* libraries your code needs are called **dependencies**
+* libraries in Rust are called **crates**
+
+* Installed along with Rust
 
 ---
 class: left
@@ -132,6 +140,7 @@ class: left
 ```
 
 * All the source code lives inside the `src` folder
+
   * main.rs will have a **hello world** example 
 
         ```rust
@@ -175,18 +184,19 @@ class: left
 $ cargo build
 ```
 
-Cargo will put the output in the target/debug directory on build
-
-# Running 
-
-```bash
-$ ./target/debug/hello_cargo
-```
+output is generated in the target/debug directory on build
 
 ---
 class: left
 
 # Building and Running a project using cargo
+
+* Manually
+
+```bash
+$ ./target/debug/hello_cargo
+```
+* Using Cargo
 
 ```bash
 $ cargo run
@@ -247,7 +257,7 @@ class: left
 
 # Summary
 
-* **rustc** is the compiler
+* `println!("Hello, world!");` 
 
 * Libraries are called **crates**
 
