--- a/static/md/1.3_How_Rust_is_Made_and_Nightly_Rust.md
+++ b/static/md/1.3_How_Rust_is_Made_and_Nightly_Rust.md
@@ -29,7 +29,7 @@ class: left
 
   * Stable : Every six weeks a stable version is released too
 
-* Called train model
+* Also called as train model
 
 ---
 class: left
@@ -40,18 +40,20 @@ class: left
 
 * Nightly will be behind feature flags
 
-* Beta won't have feature flags; helps to test out the integration
+* Beta won't have feature flags, it helps to test out the integration
 
 ---
 class: left
 
-# rustup
+# Install Nightly
+
+Installing rust nightly
 
 ```bash
 $ rustup install nightly
 ```
 
-Installs rust nightly
+List toolchains available 
 
 ```bash
 $ rustup toolchain list
@@ -69,16 +71,16 @@ $ cd ~/projects/needs-nightly
 $ rustup override add nightly
 ```
 
-Overrides the rust version for the specific project
+Overrides the rust version for a specific project
 
 ---
 class: left
 
 # The RFC Process and Teams
 
-* Rust follows **Request For Comments** (RFC) process. 
+* Rust follows **Request For Comments** (RFC) process
 
-* If you’d like an improvement in Rust, you can write up a proposal, called an RFC.
+* If you’d like an improvement in Rust, you can write up a proposal, called RFC
 
 * There are teams for each stream and they review the RFC
 
@@ -99,4 +101,4 @@ class: left
 
 * Release cycle is every **six weeks**
 
-* **rustup** installs and setup multiple versions and nightly
+* **rustup** installs and setup nightly 
