--- a/static/md/10.1_Generic_Data_Types.md
+++ b/static/md/10.1_Generic_Data_Types.md
@@ -65,11 +65,11 @@ class: left
 
 * functions `largest_i32` and `largest_char` have the exact same body
 
-* Type naming convention is 
+* Type naming convention is
 
-    *  CamelCase
+  * CamelCase
 
-    * tend to be short by convention, often just one letter
+  * tend to be short by convention, often just one letter
 
 Short for “type”, T is the default choice of most Rust programmers.
 
@@ -97,8 +97,8 @@ class: left
 
 # Using Generic Data Types in Struct Definitions
 
-Use `< >` syntax to use generic type parameter in one or more of the struct’s 
-  fields
+Use `< >` syntax to use generic type parameter in one or more of the struct’s
+fields
 
 ```rust
 struct Point<T> {
@@ -114,13 +114,14 @@ fn main() {
 
 A Point struct that holds x and y values of type T
 
-* Declare the name of the type parameter within `< >` just after the name of the 
+* Declare the name of the type parameter within `< >` just after the name of the
   struct
 
-* Use generic type in the struct definition where we would specify concrete data 
+* Use generic type in the struct definition where we would specify concrete data
   types
 
-Read as ... Point struct is generic over some type T, and the fields x and y are both that same type
+Read as ... Point struct is generic over some type T, and the fields x and y 
+are both that same type
 
 ---
 
@@ -149,7 +150,7 @@ error[E0308]: mismatched types
   = note:    found type `{float}`
 ```
 
-Errors on creating instance of a Point with different types 
+Errors on creating instance of a Point with different types
 
 The fields `x` and `y` must be the same type because both have the same generic data type `T`
 
@@ -175,7 +176,7 @@ A Point generic over two types `T` and `U`, so that x and y may be values of dif
 
 * using more than a few gets hard to read and understand
 
-* probably a sign that your code could use some restructuring 
+* probably a sign that your code could use some restructuring
 
 ---
 
@@ -260,10 +261,12 @@ fn main() {
 * Methods that use different generic types than their struct’s definition
 
 generic parameters `T` and `U` are declared after impl
-  * since they go with the struct definition
+
+* since they go with the struct definition
 
 The generic parameters `V` and `W` are declared after fn mixup
-  * since they are only relevant to the method
+
+* since they are only relevant to the method
 
 ---
 
@@ -275,7 +278,7 @@ class: left
 
 * Acheived by performing monomorphization of code using generics at compile time
 
-* Monomorphization is the process of turning generic code into specific code with 
+* Monomorphization is the process of turning generic code into specific code with
   the concrete types that are actually used filled in
 
 ---
