--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -37,12 +37,11 @@ fn main() {
 }
 ```
 
-
 ```rust
 The total no of pigs are: 5
 ```
 
-* Use all upper case with underscores between words
+* As per convention, use all upper case with underscores between words
 
 * Valid for the entire run of the program in the defined scope
 
@@ -126,11 +125,12 @@ fn main() {
 }
 ```
 
-When declaring a new variable using `let` with the same name as the old variable, the new variable is shadowing the old one.
+When declaring a new variable using `let` with the same name as the old variable, 
+the new variable is shadowing the old one.
 
-  * Shadowing helps perform transformations on immutable variables
+  * It helps perform transformations on immutable variables
 
-  * Shadowing effectively creates a new variable with the same name
+  * It effectively creates a new variable with the same name
 
 ---
 class: left
@@ -161,4 +161,4 @@ class: left
 
 * `const` can't be mutable
 
-* `shadowing` creates new variables
+* `shadowing` effectively creates new variables
