--- a/static/md/3.3_How_Funcitons_Work.md
+++ b/static/md/3.3_How_Funcitons_Work.md
@@ -42,7 +42,10 @@ fn another_function(x: i32) {
     println!("The value of x is: {}", x);
 }
 ```
-* separate multiple parameter declarations with commas
+
+* `x: i32` declare parameter with type
+
+* Separate multiple parameter declarations with commas
 
 ---
 class: left
@@ -93,6 +96,8 @@ class: left
 
 * Return early using `return` keyword or last expression implicitly
 
+* Functions that dosen't return anything returns empty tuple `()`
+
 ---
 class: left
 
@@ -114,8 +119,6 @@ fn five() -> i32 {
 ```
 
 * 5 is the last expression and it is returned implicitly
-
-* Functions that dosen't return anything returns empty tuple `()`
 
 ---
 class: left
@@ -159,8 +162,8 @@ class: left
 
 * `fn` declares a function
 
-* function implicitly returns the last expression
+* Function implicitly returns the last expression
 
-* else will return an empty tuple `()`
+* Return explicitily with `return` keyword
 
-* you can explicitly return with `return` keyword
+* Else will return an empty tuple `()`
