--- a/static/md/3.4_Comments.md
+++ b/static/md/3.4_Comments.md
@@ -24,6 +24,13 @@ class: left
 ---
 class: left
 
+# Documentation Comment
+
+* Supports doc comments with `///` 
+
+---
+class: left
+
 # Convention
 
 * Use annotation convetion
@@ -48,4 +55,4 @@ class: left
 
 * `//` for block comments as well instead of `/* */`
 
-
+* `///` documentation comments
