--- a/static/md/4.1_What_is_Ownership.md
+++ b/static/md/4.1_What_is_Ownership.md
@@ -25,7 +25,7 @@ class: left
 
 * Stack stores values in the order it gets and removes in the opposite order
 
-* This is referred to as last in, first out (LIFO)
+* This is referred to as, last in first out (LIFO)
 
 * All data should take fixed size
 
@@ -42,20 +42,22 @@ class: left
 
 # Heap
 
-* On requesting, os will find a space, mark it as use and then returns the address
+* On requesting, OS will find a space, mark it as use and then returns the address
 
 * Address is the `Pointer`
 
 * Heap is less organized
 
-* Data is of varied sizes, lage data takes more time to allocate
+* Data is of varied sizes
 
-* Process of allocating memory is called `allocation on the heap` or simply `allocation`
+* Large data takes more time to allocate
+
+* Process of allocating memory is called `allocation on the heap` or simply 
+  `allocation`
 
 <!-- ** deallocation ?  -->
 
-* Slow, because we have to follow a pointer to get there
-
+* Slow, because we have to follow a pointer to access memory
 
 ---
 class: left
@@ -67,7 +69,7 @@ Different styles of memory management...
 * **Garbage collection**, a program that constantly looks for unused memory and 
   cleans at run-time
 
-* **Manual**, programmer must explicitly allocate and free the memory 
+* **Manual**, programmer must explicitly allocate and free the memory
 
 * Follow a set of **ownership rules**, that the compiler checks at compile time 
   with no run-time cost
@@ -81,13 +83,13 @@ class: left
 
 Ownership defines a set of rules which takes care of 
 
-* keeping track of what parts of code are using what data on the heap
+  * keeping track of what parts of code are using what data on the heap
 
-* minimizing the amount of duplicate data
+  * minimizing the amount of duplicate data
 
-* cleaning up unused data
+  * cleaning up unused data
 
-* No need to think of stack and heap once you start following ownership rules.
+No need to think of stack and heap once you start following ownership rules
 
 ---
 class: left
@@ -165,7 +167,7 @@ Variables and data interact in three ways...
 
 * Move
 
-* Clone 
+* Clone
 
 * Copy
 
@@ -179,7 +181,7 @@ let s1 = String::from("hello");
 ```
 
 Allocate the heap for `hello` and push onto stack for the pointer, length and 
-  capacity with variable s1
+capacity with variable s1
 
 <img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-01.svg" width="400"/>
 
@@ -205,7 +207,7 @@ println!("{}, world!", s1);
 ```
 
 Invalidate s1 as both of them are pointing to the same heap because rust can't 
-  decide which one to drop at the end of the scope
+decide which one to drop at the end of the scope
 
 ```rust
 error[E0382]: use of moved value: `s1`
@@ -221,7 +223,7 @@ error[E0382]: use of moved value: `s1`
   not implement the `Copy` trait
 ```
 
-Throws an error if you try to access after the assignement 
+Throws an error if you try to access after the assignement
 
 ---
 class: left
@@ -343,7 +345,7 @@ fn calculate_length(s: String) -> (String, usize) {
 
 * Return the value to give back the ownership else parent scope won't have value
 
-* Tedious to tranfer back all the time, use references 
+* Tedious to tranfer back all the time, use **borrowing**
 
 ---
 class: left
