--- a/static/md/4.3_Slices.md
+++ b/static/md/4.3_Slices.md
@@ -20,14 +20,14 @@ class: left
 
 * string[start..end]
 
-* start..end syntax is a range that begins at start and continues up to, but 
+* `start..end` syntax is a range that begins at start and continues up to, but 
   not including, end
 
 * Slice will store pointer to the staring_index and the length
 
-* [0..end] and [..end] slices from beginning
+* `[0..end]` and `[..end]` slices from beginning
 
-* [start..len] and [start..] slices till the end
+* `[start..len]` and `[start..]` slices till the end
 
 ---
 class: left
