--- a/static/md/5.1_Defining_and_Instantiating_Struct.md
+++ b/static/md/5.1_Defining_and_Instantiating_Struct.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 5.1
@@ -6,23 +5,27 @@ class: middle, center
 # Defining and Instantiating Struct
 
 ---
+
 class: left
 
 # Struct
 
-* A struct or structure, is a custom data type that lets us name and package 
+* A struct or structure, is a custom data type that lets us name and package
   together multiple related values that make up a meaningful group
 
-* Its like tuples, with names and can be composed of different types
+* Its like tuples but with names
+
+* Can be composed of different types
 
 * They are like an object’s data attributes in Object Oriented Languages
 
 ---
+
 class: left
 
 # Define a Struct
 
-* Structs are defined with `struct` keyword, follwed by name, starting 
+* Structs are defined with `struct` keyword, follwed by name, starting
   with capital letter
 
 * Name should determine the significance of pieces of data grouped together
@@ -38,6 +41,7 @@ struct User {
 ```
 
 ---
+
 class: left
 
 # Create Struct instance
@@ -49,13 +53,15 @@ let mut user1 = User {
   age: 31,
 };
 ```
-* The struct definition is like a general template for the type, and instances 
+
+* The struct definition is like a general template for the type, and instances
   fill in that template with particular data to create values of the type
 
 * No need to define in the same order we declared
-<!-- can we miss few values from the declaration or add them ? -->
+  <!-- can we miss few values from the declaration or add them ? -->
 
 ---
+
 class: left
 
 # Access or change Struct values
@@ -63,7 +69,7 @@ class: left
 * Use dot notation
 
 ```rust
-  println!(user1.username); 
+  println!(user1.username);
   user1.username = Srting::from("anotherusername123")
 ```
 
@@ -72,11 +78,13 @@ class: left
 * No single field mutability
 
 ---
+
 class: left
 
-# Function return expression
+# Related Function
 
-Struct as the last expression in the function body, implicitly return a new instance
+Struct as the last expression in the function body, implicitly return a new
+instance
 
 ```rust
 fn build_user(email: String, username: String) -> User {
@@ -89,12 +97,11 @@ fn build_user(email: String, username: String) -> User {
 }
 ```
 
-* These are called related funcitons
-
 ---
+
 class: left
 
-# Field init shorthand 
+# Field init shorthand
 
 You can ignore the value if both the field and the variable have the same name
 
@@ -110,13 +117,14 @@ fn build_user(email: String, username: String) -> User {
 ```
 
 ---
+
 class: left
 
 # update struct
 
 Uses most of an old instance’s values, but changes some
 
-```rust 
+```rust
 let user2 = User {
   email: String::from("another@example.com"),
   username: String::from("anotherusername567"),
@@ -126,11 +134,12 @@ let user2 = User {
 ```
 
 ---
+
 class: left
 
 # Struct update syntax
 
-Instead of repeating all the fields `..` specifies that the fields not 
+Instead of repeating all the fields `..` specifies that the fields not
 explicitly set should have the same value as the fields in the given instance
 
 ```rust
@@ -141,20 +150,22 @@ let user2 = User {
 };
 ```
 
-* the instance should be at the end and shouldn't have a `,` like regular fields
+* Instance should be at the end and shouldn't have a `,` like regular fields
 
 ---
+
 class: left
 
 # Tuple structs
 
-* Give the whole tuple a name and make the tuple, a different type than other tuples
+* Give the whole tuple a name and make it a different type than other tuples
 
 * But naming each field like a regular struct would be verbose or redundant
 
 * `struct` keyword follwed by tuple name and the types of data in `()`
 
 ---
+
 class: left
 
 # Examples
@@ -167,34 +178,38 @@ let black = Color(0, 0, 0);
 let origin = Point(0, 0, 0);
 ```
 
-* black and origin are of different types, they are not of type tuple
+* Black and origin are of different types, they are not of type `tuple`
 
-* you can destructure and access individual values with . follwed by their index
+* Destructure and access individual values with . follwed by their index
 
 ---
+
 class: left
 
 # Unit like structs
+
+Structs that don’t have any fields
 
 ```rust
 struct QuitMessage; // unit struct
 ```
 
-* structs that don’t have any fields!
-
 * They behave similar to `()`
 
-* Useful, when you need to implement a trait on some type, but don't have data 
+* Useful, when you need to implement a trait on some type, but don't have data
 
 ---
+
 class: left
 
 # Summary
 
-* A custom data type that names and packages multiple related values 
+* A custom data type that names and packages multiple related values
 
 * use **..** for updating struct
 
 * struct as last expression in function returns a new instance
 
-* Struct tuples and unit like structs 
+* Struct tuples are useful when naming each field is verbose
+
+* unit like structs are similar to `()`
