--- a/static/md/5.3_Method_Syntax.md
+++ b/static/md/5.3_Method_Syntax.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 5.3
@@ -6,11 +5,12 @@ class: middle, center
 # Method Syntax
 
 ---
+
 class: left
 
 # Defining Methods
 
-Methods are similar to functions, except they’re defined within the 
+Methods are similar to functions, except they’re defined within the
 context of a struct, enum or trait and their first parameter is always **&self**
 
 * Declared with the `fn` keyword followed by name
@@ -38,6 +38,7 @@ fn main() {
 ```
 
 ---
+
 class: left
 
 # Calling methods
@@ -47,11 +48,12 @@ class: left
 * `rect1.area()` will call the area method on the `rect1` struct
 
 ---
+
 class: left
 
 # Methods with more parameters
 
-Methods can take multiple parameters that we add to the signature after the 
+Methods can take multiple parameters that we add to the signature after the
 self parameter, and those parameters work just like parameters in functions.
 
 ```rust
@@ -67,13 +69,14 @@ impl Rectangle {
 ```
 
 ---
+
 class: left
 
 # Associated functions
 
-* Funcitons in `impl` block that dosen't take `&self` as parameter
+Funcitons in `impl` block that dosen't take `&self` as parameter
 
-* They are functions not methods as they don't have instance of struct
+* They are **functions not methods** as they don't have instance of struct
 
 * Often used for constructors that will return a new instance of the struct
 
@@ -86,6 +89,7 @@ impl Rectangle {
 ```
 
 ---
+
 class: left
 
 # Calling Associated Funciton
@@ -94,11 +98,12 @@ class: left
 let sq = Rectangle::square(3);
 ```
 
-* The funciton is namespace by the struct
+* The funciton is namespaced by the struct
 
 * `::` is used for both Associated funcitons and the namespace created by modules
 
 ---
+
 class: left
 
 # Mutable self
@@ -110,6 +115,7 @@ class: left
 * You can also move the data to the method by using just `self`
 
 ---
+
 class: left
 
 # Multiple `impl` Blocks
@@ -131,12 +137,14 @@ impl Rectangle {
 ```
 
 ---
+
 class: left
 
 # Summary
 
-
 * Methods are functions defined in a `impl` block with a default parameter `&self`
+
+* A struct can have multiple `impl` blocks
 
 * If the parameter contains...
 
@@ -146,10 +154,8 @@ class: left
 
   * self : method will consume the value, which will move
 
-      * They are invoked with `.` syntax
-
   * no self : called Associate Functions, used as "constructor"
 
-      * They are invoked with `::` synxtax
+* If `&self` they are invoked with `.`
 
-* A struct can have multiple `impl` blocks
+* If no `self` they are invoked with `::`
