--- a/static/md/6.1_Defining_an_Enum.md
+++ b/static/md/6.1_Defining_an_Enum.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 5.4
@@ -6,6 +5,7 @@ class: middle, center
 # Defining an Enum
 
 ---
+
 class: left
 
 # Enum
@@ -14,7 +14,7 @@ class: left
 
 * Define a type by enumerating its possible values
 
-* enum data structure can only be one of the variants
+* Enum data structure can only be one of the variants
 
 ```rust
 enum IpAddrKind {
@@ -24,6 +24,7 @@ enum IpAddrKind {
 ```
 
 ---
+
 class: left
 
 # Enum Values
@@ -34,15 +35,20 @@ class: left
 let four = IpAddrKind::V4;
 let six = IpAddrKind::V6;
 ```
+
 * Both IpAddrKind::V4 and IpAddrKind::V6 are of the same type: IpAddrKind
 
 ```rust
-fn route(ip_type: IpAddrKind) { }; // function which takes IpAddrKind
-route(IpAddrKind::V4); // can take v4
-route(IpAddrKind::V6); // and v6
+// function which takes IpAddrKind
+fn route(ip_type: IpAddrKind) { };
+// can take v4
+route(IpAddrKind::V4);
+// and v6
+route(IpAddrKind::V6);
 ```
 
 ---
+
 class: left
 
 # Store Data - with struct
@@ -67,6 +73,7 @@ let loopback = IpAddr {
 ```
 
 ---
+
 class: left
 
 # Store Data - consise way
@@ -76,18 +83,17 @@ enum IpAddr {
   V4(String),
   V6(String),
 }
-
 let home = IpAddr::V4(String::from("127.0.0.1"));
-
 let loopback = IpAddr::V6(String::from("::1"));
 ```
 
 ---
+
 class: left
 
 # Advantages of enum over struct
 
-* each variant can have different types and amounts of associated data
+* Each variant can have different types and amounts of associated data
 
 ```rust
 enum IpAddr {
@@ -101,6 +107,7 @@ let loopback = IpAddr::V6(String::from("::1"));
 ```
 
 ---
+
 class: left
 
 # Summary
