--- a/static/md/7.1_mod_and_the_Filesystem.md
+++ b/static/md/7.1_mod_and_the_Filesystem.md
@@ -1,39 +1,29 @@
-
 class: middle, center
 
 ### 7.1
 
-# `mod`
+# Mod and the Filesystem
 
 ---
+
 class: left
 
-# Using Modules to Reuse and Organize Code
+# Module System
 
-* Module system enables the reuse of code in an organized fashion
+Module system enables the reuse of code in an organized fashion
 
-* A module is a namespace that contains definitions of functions or types, 
-  and you can choose whether those definitions are visible outside their module 
-  (public) or not (private)
+* A module is a namespace that contains definitions of functions or types
 
----
-class: left
+* choose whether those definitions
 
-# Overview
+  * visible outside their module (public)
 
-* The mod keyword declares a new module
+  or
 
-* Code within the module appears either immediately following the declaration 
-  within curly brackets or in another file
-
-* By default, functions, types, constants, and modules are private
-
-* Use `pub` keyword to make them public and visible outside its namespace
-
-* The `use` keyword brings modules or the definitions inside modules, into scope 
-  so it’s easier to refer to them
+  * not (private)
 
 ---
+
 class: left
 
 # `mod` and the filesystem
@@ -44,11 +34,10 @@ class: left
 * Use `cargo build` to build the library
 
 ---
+
 class: left
 
 # Module Definitions
-
-Starts with the `mod` keyword, name and block of code `{}`
 
 ```rust
 mod network {
@@ -57,16 +46,23 @@ mod network {
 }
 ```
 
-Everything in the block `{}` is inside the namespace network
+* The `mod` keyword followd by the module name declares a new module
+
+* Code within the module appears either immediately following the declaration
+  within curly brackets or in another file
+
+* Everything in the block `{}` is inside the namespace network
 
 ---
+
 class: left
 
 # Multiple `mod`s
 
-We can also have multiple modules in the same `src/lib.rs` file
+We can also have multiple modules in the same file
 
 ```rust
+// in `src/lib.rs`
 mod network {
   fn connect() {
   }
@@ -81,6 +77,7 @@ mod client {
 Function name `connect` don't conflict because they are in different namespaces
 
 ---
+
 class: left
 
 # Calling a method
@@ -93,6 +90,7 @@ client::connect();
 ```
 
 ---
+
 class: left
 
 # module inside module
@@ -116,9 +114,10 @@ and access it through...
 network::client::connect()
 ```
 
-again `connect` won't conflict because they are in different namespaces
+Again, `connect` won't conflict because they are in different namespaces
 
 ---
+
 class: left
 
 # Moving modules to Files
@@ -142,12 +141,13 @@ mod server {
 }
 ```
 
-In network.rs and client.rs, no need for `mod` declaration, just provides 
-content of the the module.
+* In network.rs and client.rs, no need for `mod` declaration, just provides
+  content of the the module.
 
-Where as for server you need to declare the `mod` as its inside network.rs
+* Where as for server you need to declare `mod` as it is inside network.rs
 
 ---
+
 class: left
 
 # Folder structure
@@ -170,6 +170,7 @@ mod client;
 ```
 
 ---
+
 class: left
 
 Declare the client module contents in client.rs
@@ -181,13 +182,13 @@ fn connect(){
 }
 ```
 
-Declare the network module contents along with server mod declaration in mod.rs
+Declare the network module contents along with server `mod` declaration in mod.rs
 
 ```rust
 // /sr/network/mod.rs
 mod server;
 fn connect(){
-  
+
 }
 ```
 
@@ -201,11 +202,12 @@ fn connect() {
 ```
 
 ---
+
 class: left
 
 # Rules of modules with regard to files
 
-* If a module named `foo` has 
+* If a module named `foo` has
 
   * submodules : Put the declarations for foo in a file named foo/mod.rs
 
@@ -213,17 +215,18 @@ class: left
 
 * These rules apply recursively
 
-* The modules should be declared in their parent module’s file using the `mod` 
+* Modules should be declared in their parent module’s file using the `mod`
   keyword
 
 ---
+
 class: left
 
 # Summary
 
 * Module provides namespaces and helps organize code
 
-* By default everything is private, use `pub` to make it public
+<!-- * By default everything is private, use `pub` to make it public -->
 
 * `mod` declares a module and you can call it with `::`
 
