--- a/static/md/7.2_Controlling_Visibility_with_pub.md
+++ b/static/md/7.2_Controlling_Visibility_with_pub.md
@@ -12,10 +12,10 @@ class: left
 
 * The default state of all code in Rust is private
 
-* If you don’t use a private function within your program Rust will warn you 
-  that the function has gone unused
+* If you don’t use a private function within your program Rust will warn that 
+  the function is unused
 
-* when marked public, Rust will stop warning that the function is unused
+* When marked public, Rust will stop warning
 
 ---
 class: left
@@ -63,7 +63,7 @@ fn try_me() {
 ---
 class: left
 
-# Example1 : Errors
+# Example1 : Output
 
 ```rust
 mod outermost {
