--- a/static/md/7.3_Referring_to_Names_in_Different_Modules.md
+++ b/static/md/7.3_Referring_to_Names_in_Different_Modules.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 7.3
@@ -6,6 +5,7 @@ class: middle, center
 # Referring to Names in Different Modules
 
 ---
+
 class: left
 
 # Calling a function in module
@@ -26,9 +26,10 @@ fn main() {
 
 * Call function by fully specifying its enclosing module’s path joined by `::`
 
-* Someties referring to the fully qualified name can get quite lengthy 
+* Someties referring to the fully qualified name can get quite lengthy
 
 ---
+
 class: left
 
 # Bringing Names into Scope
@@ -49,12 +50,13 @@ fn main() {
 }
 ```
 
-* `use` keyword follwed by the enclosing module’s path brings the module into 
-  scope 
+* `use` keyword follwed by the enclosing module’s path brings the module into
+  scope
 
 * It dosen't bring the childrens of module into scope
 
 ---
+
 class: left
 
 # Bringing functions into Scope
@@ -80,12 +82,13 @@ fn main() {
 This exclude all the modules and reference the function directly
 
 ---
+
 class: left
 
 # Bringing `enums` into Scope
 
 Because enums also form a sort of namespace like modules, we can bring an enum’s
- variants into scope with `use`
+variants into scope with `use`
 
 ```rust
 enum TrafficLight {
@@ -103,18 +106,19 @@ fn main() {
 }
 ```
 
-* if bringing multiple items from one namespace into scope, you can list them 
+* if bringing multiple items from one namespace into scope, you can list them
   using curly brackets and commas in the last position
 
-* Still specifying the TrafficLight namespace for the Green variant because we 
+* Still specifying the TrafficLight namespace for the Green variant because we
   didn’t include Green in the use statement
 
 ---
+
 class: left
 
 # Bringing All Names into Scope with a Glob
 
-Bring all the items in a namespace into scope at once using `*` 
+Bring all the items in a namespace into scope at once using `*`
 
 ```rust
 enum TrafficLight {
@@ -133,11 +137,12 @@ fn main() {
 use globs sparingly, they might cause naming conflicts
 
 ---
+
 class: left
 
 # Using super to Access a Parent Module
 
-Access root of the module using the `::` at the start 
+Access root of the module using the `::` at the start
 
 ```rust
 ::client::connect();
@@ -150,27 +155,30 @@ super::client::connect();
 ```
 
 ---
+
 class: left
 
-# Root `::` vs `super::`
+# Root `::` vs Super `super::`
 
 When compared with using the root `::`
 
-  * super is helpful incase of deep modules
+* super is helpful incase of deep modules
 
-  * super won't break the modules even if they are re arranged
+* super won't break the modules even if they are re arranged
 
 ---
+
 class: left
 
 # Summary
 
-* You call a function in side a module with fully qualified name `a::series::of::nested_modules();`
+* You call a function in side a module with fully qualified name 
+  `a::series::of::nested_modules();`
 
-* `use` keyword follwed by the enclosing module’s path brings the module into 
-  scope 
+* `use` keyword follwed by the enclosing module’s path brings the module into
+  scope
 
-* Bring all the items in a namespace into scope at once using `*` 
+* Bring all the items in a namespace into scope at once using glob `*`
 
 * `::` at the begining of the path lets you access the root of the module
 
