--- a/static/md/8.0_Common_Collections.md
+++ b/static/md/8.0_Common_Collections.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 8
@@ -6,42 +5,48 @@ class: middle, center
 # Common Collections
 
 ---
+
 class: left
 
 # Collections
 
-* Rust’s standard library includes a number of very useful data structures 
+* Rust’s standard library includes a number of very useful data structures
   called collections.
 
-* Most data types represent one specific value, but collections can contain 
-  multiple values 
-  
-* Unlike the built-in array and tuple types, the data these collections point 
+* Most data types represent one specific value, but collections can contain
+  **multiple values**
+
+* Unlike the built-in array and tuple types, the data these collections point
   to is stored on the heap, which means
-    * amount of data does not need to be known at compile time 
-    * can grow or shrink as the program runs
-  
-* Each kind of collection has different capabilities and costs, and choosing an 
-  appropriate one for your current situation is a skill you’ll develop over time
+
+  * amount of data does not need to be known at compile time
+
+  * can grow or shrink as the program runs
+
+* Each kind of collection has different capabilities and costs
+
+* Choosing an appropriate one is a skill you’ll develop over time
 
 ---
+
 class: left
 
 # Types of Collections
 
 The major three types of collections commonly used are...
 
-* vector: store a variable number of values next to each other
+* vector: Store a variable number of values next to each other
 
-* string: a collection of characters
+* string: A collection of characters
 
-* hash map: associate a value with a particular key
+* hash map: Associate a value with a particular key
 
 ---
+
 class: left
 
 # Summary
 
 * Collections can contain multiple values
 
-* vectors, strings and hash map
+* vectors, strings and hash map are most famous
