--- a/static/md/8.1_Vectors.md
+++ b/static/md/8.1_Vectors.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 8.1
@@ -6,6 +5,7 @@ class: middle, center
 # Vectors
 
 ---
+
 class: left
 
 # Vectors Store Lists of Values
@@ -14,9 +14,9 @@ class: left
 
 * Puts all the values next to each other in memory
 
-* Vectors are implemented using generics
+* Implemented using generics
 
-* Vector also represented as `Vec<T>`
+* Also represented as `Vec<T>`
 
 * `Vec<T>` type provided by the standard library can hold any type
 
@@ -25,11 +25,12 @@ class: left
 * Use cases: lines of text in a file, prices of items in a shopping cart
 
 ---
+
 class: left
 
 # Creating a New Vector
 
-# `vec<T>` 
+## `vec<T>`
 
 ```rust
 let v: Vec<i32> = Vec::new();
@@ -37,7 +38,7 @@ let v: Vec<i32> = Vec::new();
 
 Creates a new empty vector to hold values of type `i32`
 
-# `vec!` macro
+## `vec!` macro
 
 ```rust
 let v = vec![1, 2, 3];
@@ -46,6 +47,7 @@ let v = vec![1, 2, 3];
 Rust provides the `vec!` macro for convenience
 
 ---
+
 class: left
 
 # Updating a Vector
@@ -63,8 +65,9 @@ v.push(7);
 * Use `mut` to make it mutable
 
 * Infers type from the data, so we don’t need to add Vec<i32> annotation
- 
+
 ---
+
 class: left
 
 # Dropping a Vector Drops Its Elements
@@ -83,13 +86,12 @@ class: left
 * integers vector holds will be cleaned up
 
 ---
+
 class: left
 
 # Reading Elements of Vectors
 
-Two ways to reference a value stored in a vector
-
-`indexing` Syntax
+### `indexing` Syntax
 
 ```rust
 let v = vec![1, 2, 3, 4, 5];
@@ -100,7 +102,7 @@ let third: &i32 = &v[2];
 
 * Non existent element access will cause a panic!
 
-`get` Method
+### `get` Method
 
 ```rust
 let v = vec![1, 2, 3, 4, 5];
@@ -112,17 +114,22 @@ let third: Option<&i32> = v.get(2);
 * Non existent element access will return `None` without panic
 
 ---
+
 class: left
 
 # Invalid References
 
-When the program has a valid reference the borrow checker enforces 
+When the program has a valid reference the borrow checker enforces
 
-  * the ownership 
+* ownership
 
-  * borrowing rules 
+* borrowing rules
 
 to ensure references to the contents of the vector remain valid
+
+---
+
+class: left
 
 ```rust
 let mut v = vec![1, 2, 3, 4, 5];
@@ -148,15 +155,16 @@ error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immuta
 
 * Can't add an element to a vector while holding a reference to an item
 
-* reason: adding a new element might require allocating new memory and copying 
+* Adding a new element might require allocating new memory and copying
   the old elements to the new space
 
 ---
+
 class: left
 
-# Iterating Over the Values in a Vector
+# Iterating Over the Values
 
-* with immutable reference to elements
+### With immutable reference to elements
 
 ```rust
 let v = vec![100, 32, 57];
@@ -165,7 +173,7 @@ for i in &v {
 }
 ```
 
-* with mutable reference to elements
+### With mutable reference to elements
 
 ```rust
 let mut v = vec![100, 32, 57];
@@ -174,18 +182,19 @@ for i in &mut v {
 }
 ```
 
-To change the value we have to use the dereference operator (*)
+To change the value we have to use the dereference operator (\*)
 
 ---
+
 class: left
 
 # Using an Enum to Store Multiple Types
 
-* Vectors can only store values that are the same type
+* Vectors can only store values that are of same type
 
 * This can be inconvenient
 
-* We can use `enum`, because all the variants of an enum are defined under the 
+* We can use `enum`, because all the variants of an enum are defined under the
   same enum type
 
 ```rust
@@ -203,6 +212,7 @@ let row = vec![
 ```
 
 ---
+
 class: left
 
 # Reason for types in vector
@@ -213,18 +223,19 @@ class: left
 
 * Using an enum plus a match expression helps handle every possible case
 
-* If types are not known at compile time, enum technique won’t work. 
+* If types are not known at compile time, enum technique won’t work
 
 * You can use a trait object, in such case
 
 ---
+
 class: left
 
 # Summary
 
 * `Vector` stores more than one value
 
-* Created with `Vec<T>::new()` or `vec![]` macro 
+* Created with `Vec<T>::new()` or `vec![]` macro
 
 * Update a vector with `.push()`
 
@@ -232,7 +243,7 @@ class: left
 
 * When referencing elements, ownership and borrowing rules are applied
 
-* You can itereate with a for loop using a reference `&` or a mutable reference 
+* You can itereate with a for loop using a reference `&` or a mutable reference
   `&mut`
 
 * Since `vec` stores only one type, you can use `enum` to store multiple
