--- a/static/md/8.3_Hash_Maps.md
+++ b/static/md/8.3_Hash_Maps.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 8.3
@@ -6,6 +5,7 @@ class: middle, center
 # Hash Maps
 
 ---
+
 class: left
 
 # Hash Maps Store Keys Associated with Values
@@ -19,9 +19,10 @@ class: left
 * Use case: Team score in a game
 
 ---
+
 class: left
 
-#  Creating a New Hash Map
+# Creating a New Hash Map
 
 ```rust
 use std::collections::HashMap;
@@ -32,52 +33,32 @@ scores.insert(String::from("Yellow"), 50);
 
 * Unlike other collections, it is not included in the scope automatically
 
-* hash maps store their data on the heap
+* Hash Maps store their data on the heap
 
-* Hash maps are homogeneous 
+* Hash Maps are homogeneous
 
-    * all of the keys must have the same type
+  * all of the keys must have the same type
 
-    * and all of the values must have the same type
+  * and all of the values must have the same type
 
 ---
+
 class: left
 
-#  Another way of creating a New Hash Map
+# Another way of creating a New Hash Map
 
 ```rust
 use std::collections::HashMap;
 let teams  = vec![String::from("Blue"), String::from("Yellow")];
 let initial_scores = vec![10, 50];
 let scores: HashMap<_, _> = teams.iter().zip(initial_scores.iter()).collect();
-  ```
-  
-Another way of creating a hashmap is to use collect method on a vector of tuples, 
-where each tuple consists of a key and its value
-
-<!-- ---
-class: left
-
-# updating a Hash Map
-
-```rust
-use std::collections::HashMap;
-
-let field_name = String::from("Favorite color");
-let field_value = String::from("Blue");
-
-let mut map = HashMap::new();
-map.insert(&field_name, &field_value);
 ```
 
-* the number of keys and values is growable
-
-* But, each key can only have one value associated with it at a time
-
-* Insert values into hashmap with `insert` method which takes (key, value) as 
-arguments -->
+Another way of creating a hashmap is to use collect method on a vector of tuples,
+where each tuple consists of a key and its value
 
 ---
+
 class: left
 
 # Hash Maps and Ownership
@@ -94,13 +75,14 @@ map.insert(field_name, field_value);
 ```
 
 * For scalar types like `<i32>` which implements copy trait, data is copied
-  
+
 * For types like `String`, value will be moved and hashmap will be the owner
 
 * For references, values must be valid for at least as long as the hash map is
-  valid 
+  valid
 
 ---
+
 class: left
 
 # Accessing Values in a Hash Map
@@ -120,6 +102,7 @@ let score = scores.get(&team_name);
 Get a value out of the hash map by providing its key to the get method
 
 ---
+
 class: left
 
 # Iterating over hashmap
@@ -145,28 +128,28 @@ Blue: 10
 * Will print in an arbitary order
 
 ---
+
 class: left
 
 # Updating a Hash Map
 
-* The number of keys and values are growable 
+* The number of keys and values are growable
 
 * But, each key can have only one value associated with it at a time
 
-* When updating, we have to decide how to handle the case when
+* When updating, we can...
 
   * If key already exists, overwrite old value
 
-  * Insert only if the key has no value 
+  * Insert only if the key has no value
 
   * Updating a Value Based on the Old Value
 
 ---
+
 class: left
 
 # If key already exists, Overwrite old Value
-
-`insert` will overwrite the value, else will create
 
 ```rust
 use std::collections::HashMap;
@@ -185,16 +168,15 @@ println!("{:?}", scores);
 
 `insert` will take the key value pair...
 
-  * Will create if the key don't exist
+* Will create if the key don't exist
 
-  * Will overwrite if it already exist
+* Will overwrite if it already exist
 
 ---
+
 class: left
 
 # Only Insert If the Key Has No Value
-
-`entry` will return the key status and update based on it
 
 ```rust
 use std::collections::HashMap;
@@ -214,17 +196,18 @@ println!("{:?}", scores);
 
 * `entry` takes the key we want to check as a parameter
 
-* returns an `enum` called `Entry` that represents a value that might 
+* returns an `enum` called `Entry` that represents a value that might
   or might not exist
+
+* Update the value based on it
 
 * Since blue already exists it won't update
 
 ---
+
 class: left
 
 # Updating a Value Based on the Old Value
-
-`entry` will look up key's status and update it based on the old value
 
 ```rust
 use std::collections::HashMap;
@@ -245,14 +228,19 @@ println!("{:?}", map);
 {"world": 2, "hello": 1, "wonderful": 1}
 ```
 
-* WIP
+* `entry` will look up key's status and update it based on the old value
+
+* If its the first time we are looking up the word, it will create it
+
+* Next time it will increment the count
 
 ---
+
 class: left
 
 # Hashing Function
 
-* HashMap uses a cryptographically secure hashing function that can provide 
+* HashMap uses a cryptographically secure hashing function that can provide
   resistance to Denial of Service (DoS) attacks
 
 * If its slow, you can switch to another function by specifying a different hasher
@@ -260,6 +248,7 @@ class: left
 * Lot of them are available in crates.io
 
 ---
+
 class: left
 
 # Summary
