--- a/static/md/9.1_Unrecoverable_Errors_with_panic.md
+++ b/static/md/9.1_Unrecoverable_Errors_with_panic.md
@@ -5,11 +5,12 @@ class: middle, center
 # Unrecoverable Errors with panic!
 
 ---
+
 class: left
 
 # `panic!` macro
 
-Rust provides `panic!` macro for case of critical failures...
+Rust provides `panic!` macro for cases of critical failures...
 
 `Panic!` macro will...
 
@@ -17,31 +18,33 @@ Rust provides `panic!` macro for case of critical failures...
 
   * unwind and clean up the stack or abort
 
-  * and then quit. 
+  * and then quit.
 
 ---
+
 class: left
 
 # Unwinding the Stack or Aborting in Response to a panic!
 
-* Unwinding 
+* Unwinding
 
-  * Rust walks back the stack and clean up the data from each funciton 
+  * Rust walks back the stack and clean up the data from each function
 
-  * Take a lot of work and resulting binary will be large
+  * Takes a lot of work and resulting binary will be large
 
-* Unwinding 
+* Unwinding
 
-  * Ends the program with out cleanup and OS will clean the data 
+  * Ends the program with out cleanup and OS will clean the data
 
   * Process will end quickly and the resulting binary will be small
 
 ---
+
 class: left
 
 # Config
 
-Add `panic = 'abort'` to the appropirate profile 
+Add `panic = 'abort'` to the appropirate profile
 
 ```TOML
 [profile.release]
@@ -51,9 +54,10 @@ panic = 'abort'
 If you want to abort on panic in release mode
 
 ---
+
 class: left
 
-# `panic!` intentionally 
+# `panic!` intentionally
 
 ```rust
 fn main() {
@@ -71,6 +75,7 @@ note: Run with `RUST_BACKTRACE=1` for a backtrace.
 ```
 
 ---
+
 class: left
 
 # `panic!` caused by an issue
@@ -97,32 +102,34 @@ error: Process didn't exit successfully: `target/debug/panic` (exit code: 101)
 Attempting to access an element beyond the end of a vector, which will cause a panic!
 
 ---
+
 class: left
 
 # Using a panic! Backtrace
 
-* A backtrace is a list of all the functions that have been called to get to 
+* A backtrace is a list of all the functions that have been called to get to
   this point
 
-* set the `RUST_BACKTRACE` environment variable to get a backtrace of exactly 
+* set the `RUST_BACKTRACE` environment variable to get a backtrace of exactly
   what happened to cause the error.
 
-* The key to reading the backtrace is to start from the top and read until 
+* The key to reading the backtrace is to start from the top and read until
   you see files you wrote
 
-* To get backtraces, debug symbols must be enabled. 
+* To get backtraces, debug symbols must be enabled
 
-* They are enabled by default when using cargo build or cargo run without the 
+* They are enabled by default when using cargo build or cargo run without the
   --release flag
 
 ---
+
 class: left
 
 # Summary
 
 * `panic!` prints a failure message and unwinds, cleanup or abort and then quit
 
-* Choose to cleanup or abort by setting `panic = 'abort'` in Cargo.toml 
+* Choose to cleanup or abort by setting `panic = 'abort'` in Cargo.toml
 
 * A backtrace is a list of all the functions that have been called to get to this point
 
