--- a/static/md/9.2_Recoverable_Errors_with_Result.md
+++ b/static/md/9.2_Recoverable_Errors_with_Result.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 9.2
@@ -6,19 +5,21 @@ class: middle, center
 # Recoverable Errors with Result
 
 ---
+
 class: left
 
 # Recoverable Errors
 
 * Most errors aren’t serious enough to stop the program entirely
 
-* When a function fails, it’s for a reason that we can easily interpret and 
+* When a function fails, it’s for a reason that we can easily interpret and
   respond to
 
-* eg; If we try to open a file and that operation fails because the file doesn’t 
+* eg; If we try to open a file and that operation fails because the file doesn’t
   exist, we might want to create the file instead of terminating the process.
 
 ---
+
 class: left
 
 # `Result`
@@ -32,18 +33,23 @@ enum Result<T, E> {
 
 * `T` and `E` are generic type parameters
 
-* `T` represents the type of the value that will be 
-  * returned in a success case 
+* `T` represents the type of the value that will be
+
+  * returned in a success case
+
   * within the Ok variant
 
-* `E` represents the type of the error that will be 
-  * returned in a failure case 
+* `E` represents the type of the error that will be
+
+  * returned in a failure case
+
   * within the Err variant
 
-* Because `Result` has these generic type parameters, we can use it in many 
+* Because `Result` has these generic type parameters, we can use it in many
   different situations
 
 ---
+
 class: left
 
 # Example
@@ -58,7 +64,7 @@ fn main() {
 
 * Opening a file returns a `Result` value because the function could fail
 
-* How do we know that ? 
+* How do we know that ?
 
   * Look at the standard library
 
@@ -66,7 +72,7 @@ fn main() {
 
 ```rust
 let f: u32 = File::open("hello.txt");
-``` 
+```
 
 will throw an error
 
@@ -100,11 +106,10 @@ Which means that call to File::open might...
 
 In case of `File::open` the value of f will be...
 
-  * succeeds : instance of Ok that contains a file handle
-  
-  * failure : instance of Err that contains more information about the kind of 
-              error that happened
+  * succeeds : instance of `Ok` that contains a file handle
 
+  * failure : instance of `Err` that contains more information about the kind of
+    error that happened
 
 Take different actions depending on the value `File::open` returned
 
@@ -128,18 +133,19 @@ fn main() {
 
 * we don’t need to specify `Result::` before the `Ok` and `Err` variants
 
-* when the result is Ok, return the inner file value out of the Ok variant, 
+* when the result is Ok, return the inner file value out of the Ok variant,
   and we then assign that file handle value to the variable f
 
-* The other arm of the match handles the case where we get an Err value from 
-  File::open. In this example, we’ve chosen to call the panic! macro 
+* The other arm of the match handles the case where we get an Err value from
+  File::open. In this example, we’ve chosen to call the panic! macro
 
 ---
+
 class: left
 
 # Matching on Different Errors
 
-Take different actions for different failure reasons 
+Take different actions for different failure reasons
 
 ```rust
 use std::fs::File;
@@ -172,11 +178,12 @@ fn main() {
 ```
 
 ---
+
 class: left
 
-* `File::open` on error returns `io::Error` inside the Err variant
+* `File::open` on error returns `io::Error` inside the `Err` variant
 
-* `io::Error` is a struct provided by the standard library 
+* `io::Error` is a struct provided by the standard library
 
 * `kind` method on struct will return an `io::ErrorKind` value
 
@@ -184,31 +191,33 @@ class: left
 
 * `if error.kind() == ErrorKind::NotFound` is called a match guard
 
-  * it’s an extra condition on a match arm that further refines the arm’s pattern
+  * It’s an extra condition on a match arm that further refines the arm’s pattern
 
   * This condition must be true for that arm’s code to be run
 
 * WIP
 
 ---
+
 class: left
 
 # Shortcuts for Panic on Error: unwrap and expect
 
-* Using match works well enough 
+* Using match works well enough
 
-* but it can be a bit verbose
+* But it can be a bit verbose
 
-* doesn’t always communicate intent well
+* Doesn’t always communicate intent well
 
 ---
+
 class: left
 
 # unwrap
 
 `unwrap` is a shortcut method that is implemented just like the `match`
 
-* If the Result value is 
+* If the Result value is
 
   * Ok variant : unwrap will return the value inside the Ok
 
@@ -229,15 +238,16 @@ src/libcore/result.rs:906:4
 ```
 
 ---
+
 class: left
 
 # expect
 
-* works the same way as unwrap
+* Works the same way as unwrap
 
 except...
 
-* Customize the panic! message instead of the default 
+* Customize the panic! message instead of the default
 
 ```rust
 use std::fs::File;
@@ -255,6 +265,7 @@ thread 'main' panicked at 'Failed to open hello.txt: Error { repr: Os { code:
 Helpful for debugging, as the error message is specific
 
 ---
+
 class: left
 
 # Propagating Errors
@@ -262,6 +273,7 @@ class: left
 * WIP
 
 ---
+
 class: left
 
 # A Shortcut for Propagating Errors: ?
@@ -282,6 +294,7 @@ fn read_username_from_file() -> Result<String, io::Error> {
 * WIP
 
 ---
+
 class: left
 
 # `?` Can Only Be Used in Functions That Return Result
@@ -291,6 +304,7 @@ class: left
 * WIP
 
 ---
+
 class: left
 
 # Summary
