--- a/static/md/9.3_To_panic_or_Not_To_panic.md
+++ b/static/md/9.3_To_panic_or_Not_To_panic.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 9.3
@@ -6,43 +5,46 @@ class: middle, center
 # To panic! or Not To panic!
 
 ---
+
 class: left
 
 # Panic! or Not
 
 * `panic!` can be called for any error situation, recoverable or unrecoverable
 
-* But, You are making the decision on behalf of the code calling your code that 
-the error is unrecoverable 
+* But, you are making the decision on behalf of the code calling your code that
+  the error is unrecoverable
 
 * `Result` will give the option to the callig code to decide wether to panic or not
 
 * Returning `Result` is a good default choice
 
 ---
+
 class: left
 
 # Places to `Panic!`
 
 * When it’s possible that your code could end up in a bad state
-  
+
   * The bad state is not something that’s expected to happen occasionally
 
   * Your code after this point needs to rely on not being in this bad state
 
   * There’s not a good way to encode this information in the types you use
 
-* it’s Perfectly Fine to Panic in 
+* It’s Perfectly fine to Panic in
 
   * Examples
 
-  * Prototype Code and 
+  * Prototype Code and
 
-  * Tests  
+  * Tests
 
 * When You Have More Information Than the Compiler
 
 ---
+
 class: left
 
 # Guidelines for Error Handling
@@ -50,6 +52,7 @@ class: left
 * WIP
 
 ---
+
 class: left
 
 # Creating Custom Types for Validation
@@ -57,6 +60,7 @@ class: left
 * WIP
 
 ---
+
 class: left
 
 # Summary
