--- a/static/md/1.0_Introduction.md
+++ b/static/md/1.0_Introduction.md
@@ -9,7 +9,7 @@ class: left
 
 # The Rust Programming Language
 
-* Rust is a programming language that helps you write faster, more reliable software.
+* Rust is a programming language that helps you write faster, more reliable software
 
 * Provides High-level ergonomics and low-level control
 
