--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -30,12 +30,12 @@ Rust infers type from the value provided
 
 ```rust
 fn main() {
-  let x; // can't infer as no value provided and not annotated as well
+  let x; 
   println!("The value of x is: {}", x);
 }
 ```
 
-Throws an errror as Rust can't infer, because no value is given
+Rust can't infer, as no value provided and not annotated as well
 
 ```rust
 error[E0282]: type annotations needed
@@ -101,17 +101,19 @@ Numbers with out decimal points
 | 64-bit | `i64`   | `u64`    |
 | arch   | `isize` | `usize`  |
 
-* **signed** integer types start with **i** and **unsigned** with **u**
+* **Signed** supports positive and negative nubmers and starts with `i`
 
-* Where n is the number of bits that variant uses
+* **Unsigned** only supports positive numbers and starts with `u`
+
+* Where n is the number of bits that variant uses...
 
   * signed integter can store -(2<sup>n - 1</sup>) to 2<sup>n - 1</sup> - 1
 
   * unsigned integter can store `0` to 2<sup>n - 1</sup> - 1
 
-* isize and usize types depend on the computer architecture
+* `isize` and `usize` depend on the computer architecture
 
-* defaults to i32, generally the fastest, even on 64-bit systems
+* Defaults to i32, generally the fastest, even on 64-bit systems
 
 ---
 class: left
@@ -141,7 +143,7 @@ class: left
 
 # Numeric Operations
 
-Number types has the usual basic mathematical operations you’d expect
+Number types has the usual basic mathematical operations...
 
 ```rust
 fn main() {
@@ -196,11 +198,12 @@ fn main() {
 
 * Specified with **single quotes**, as opposed to strings that use double quotes
 
-* represents a Unicode Scalar Value, which means a lot more than just ASCII
+* represents a Unicode Scalar Value, which includes a lot more than just ASCII
 
 * Accented letters, Chinese/Japanese/Korean ideographs, emoji, and zero width spaces
 
-* a “character” isn’t really a concept in Unicode, so your human intuition for what a “character” is may not match up with what a char is in Rust
+* a “character” isn’t really a concept in Unicode, so your human intuition for 
+  what a “character” is may not match up with what a char is in Rust
 
 ---
 class: left
@@ -212,8 +215,6 @@ class: left
   * Tuples
 
   * Arrays
-
-<!-- what about strings ? -->
 
 ---
 class: left
@@ -254,6 +255,7 @@ fn main() {
   println!("The value of y is: {}", y);
 }
 ```
+
 * Ignore the destructured values with `_`
 
 Can also Access elements with **dot notation**
