--- a/static/md/3.5_Control_Flow.md
+++ b/static/md/3.5_Control_Flow.md
@@ -17,8 +17,6 @@ fn main() {
   let number = 3;
   if number < 5 {
       println!("condition was true");
-  } else {
-      println!("condition was false");
   }
 }
 ```
@@ -36,41 +34,58 @@ class: left
 
 # `else` expression
 
-* else expression is optional
+evalutes if the **if expression** condition is false
 
-* evalutes if the **if expression** condition is false
+```rust
+  if number < 5 {
+      println!("condition was true");
+  } else {
+      println!("condition was false");
+  }
+```
 
 ---
 class: left
 
 # `else if` expression
 
-* multiple conditions with **else if**
+Multiple conditions with **else if**
+
+```rust
+  if number = 5 {
+      println!("number is 5");
+  } else if number < 5  {
+      println!("condition was true");
+  } else {
+      println!("condition was false");
+  }
+```
 
 ---
 class: left
 
 # Using `if` in a `let` statement
 
-* since `if` is an expression we can use it in a statement and assign to a 
-  variable.
+* `if` is an expression
+
+* We can use it in a statement and assign to a variable
 
 ```rust
 let number = if condition {
-  5 // expression
+  5 
 } else {
-  6 // expression
-} // expression
+  6 
+} 
 ```
 
-* Arms of the if expressions should be of same type
+* Arms of the if expressions should be of the same type
 
 ```rust
 let number = if condition {
-  5 // expression
+  5 // integer
 } else {
-  "six" // expression
-} // expression
+  "six" // string literal 
+}
 ```
 
 * An `if` without an `else` always returns an empty tuple `()`
@@ -82,7 +97,7 @@ class: left
 
 * Execute a block of code more than once
 
-* Three types of loops, **loop**, **while** and **for**
+* They are three types...**loop**, **while** and **for**
 
 ---
 class: left
@@ -99,9 +114,13 @@ fn main() {
 }
 ```
 
-* Cancel with `ctrl+c`
+Cancel with 
 
-* Or gracefully cancel with a `break` keyword
+  * `ctrl+c` 
+  
+  or 
+
+  * `break` keyword for stopping gracefully
 
 ---
 class: left
@@ -159,8 +178,8 @@ class: left
 * **if** and **else if** expression should have condition which evaluates to 
   boolean
 
-* Blocks of code called **arms** are executed based on the condition value and 
-  all the arms should be of same type
+* Blocks of code in `{}` called **arms** are executed based on the condition 
+  value and all the arms should be of same type
 
 * **if** can be used in a statement and assigned to a variable
 
