--- a/static/md/8.2_Strings.md
+++ b/static/md/8.2_Strings.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 8.2
@@ -6,22 +5,24 @@ class: middle, center
 # Strings
 
 ---
+
 class: left
 
 # Strings Store UTF-8 Encoded Text
 
-Strings are implemented as a collection of bytes plus some methods to provide 
+Strings are implemented as a collection of bytes plus some methods to provide
 useful functionality when those bytes are interpreted as text
 
 Strings are difficult because...
 
-  * Rust’s propensity for exposing possible errors
+* Rust’s propensity for exposing possible errors
 
-  * strings being a more complicated data structure
-    
-  * UTF-8
+* strings being a more complicated data structure
+
+* UTF-8
 
 ---
+
 class: left
 
 # str
@@ -30,12 +31,13 @@ class: left
 
 * Generally seen in it's borrowd form `&str`
 
-* These are called *string slices*
+* These are called **string slices**
 
-* String literals are stored in the binary output of the program and are 
+* **String literals** are stored in the binary output of the program and are
   therefore string slices
 
 ---
+
 class: left
 
 # String
@@ -45,6 +47,7 @@ class: left
 * Is a growable, mutable, owned, UTF-8 encoded string type
 
 ---
+
 class: left
 
 # String vs str
@@ -62,6 +65,7 @@ class: left
 * Libraries can provide even more options
 
 ---
+
 class: left
 
 # Creating a New String
@@ -78,14 +82,17 @@ let s = data.to_string();
 // the method also works on a literal directly
 let s = "initial contents".to_string();
 ```
-create a string literal and then convert that to String 
+
+create a string literal and then convert that to String
 
 ```rust
 let s = String::from("initial contents");
 ```
+
 Create a String from string literal directly
 
 ---
+
 class: left
 
 # UTF-8 encoded
@@ -109,19 +116,21 @@ let hello = String::from("Hola");
 ```
 
 ---
+
 class: left
 
 # Updating a String
 
-A string can 
+A string can
 
-  * Grow in size
+* Grow in size
 
-  * Contents can change
+* Contents can change
 
 Use `+` or the `format!` macro to concatenate string values together
 
 ---
+
 class: left
 
 # Appending to a String with `push_str`
@@ -142,11 +151,12 @@ println!("s2 is {}", s2);
 
 * Takes a string slice as parameter
 
-* Dosen't take ownership of the argument it gets
+* Dosen't take ownership of the argument
 
-* Adds the string slice to the existing string
+* Adds the string slice to the existing String
 
 ---
+
 class: left
 
 # Appending to a String with `push`
@@ -155,20 +165,22 @@ class: left
 let mut s = String::from("lo");
 s.push('l');
 ```
+
 `push` method ...
 
-* Takes a character as a parameter 
+* Takes a character as parameter
 
 * Dosen't take ownership of the argument
 
 * Dosen't accept references
 
-* and adds the character to the String
+* Adds the character to the end of String
 
 ---
+
 class: left
 
-# Concatenation with the + Operator 
+# Concatenation with the + Operator
 
 ```rust
 let s1 = String::from("Hello, ");
@@ -176,35 +188,37 @@ let s2 = String::from("world!");
 let s3 = s1 + &s2; // Note that s1 has been moved here and can no longer be used
 ```
 
-* `+` is a generic and we can add only a `&str` to `String`
-
 ---
+
 class: left
 
 # `+` implementation
 
 * looks someting like this...
 
-```rust
-fn add(self, s: &str) -> String {
-```
+  ```rust
+  fn add(self, s: &str) -> String {
+  ```
 
-* We can't add two `String` values 
+* `+` is a generic and we can add only a `&str` to `String`
 
-* Add `&Str` to `String`
+* We can't add two `String` values
 
 * But, wait, the type of `&s2` is `String` not `Str` ?
 
-* Rust uses a *deref coercion*, which here turns &s2 into &s2[..]
+* Rust uses a _deref coercion_, which here turns &s2 into &s2[..]
 
 ---
+
 class: left
 
 # Ownership
 
-`let s3 = s1 + &s2;` 
+```rust
+let s3 = s1 + &s2;
+```
 
-* Take ownership of s1
+* `+` takes ownership of s1
 
 * Appends a copy of the contents of s2
 
@@ -213,9 +227,10 @@ class: left
 * Returns ownership of the result
 
 ---
+
 class: left
 
-# Concatenating multiple strings
+# Concatenating with `+`
 
 ```rust
 let s1 = String::from("tic");
@@ -226,9 +241,10 @@ let s = s1 + "-" + &s2 + "-" + &s3;
 ```
 
 ---
+
 class: left
 
-# Concatenation with the format! Macro 
+# Concatenation with `format!`
 
 ```rust
 let s1 = String::from("tic");
@@ -243,6 +259,7 @@ let s = format!("{}-{}-{}", s1, s2, s3);
 * Dosen't take ownership of any parameters
 
 ---
+
 class: left
 
 # Indexing into Strings
@@ -265,20 +282,22 @@ error[E0277]: the trait bound `std::string::String: std::ops::Index<{integer}>` 
 ```
 
 ---
+
 class: left
 
 # Why not?
 
-accessing individual characters in a string by referencing them by index is a 
+Accessing individual characters in a string by referencing them by index is a
 valid and common operation in many programmig languages
 
 ---
+
 class: left
 
 # Internal Representation
 
 `String` is a wrapper over a `Vec<u8>`
-  
+
 ```rust
 let len = String::from("Hola").len(); // 4
 ```
@@ -293,28 +312,45 @@ Vec storing the string “Здравствуйте” is 24 bytes long rathern t
 
 Why ?
 
-  * Because each Unicode scalar value takes two bytes of storage
+Because each Unicode scalar value takes two bytes of storage
 
-So, an index into the string’s bytes will not always correlate to a valid 
+So, an index into the string’s bytes will not always correlate to a valid
 Unicode scalar value
-  
+
 ---
+
 class: left
 
 # Bytes and Scalar Values and Grapheme Clusters! Oh My!
 
 Rust provides different ways of interpreting the raw string data
 
-Hindi word “नमस्ते” written in the Devanagari script is ultimately stored as 
+* Bytes
 
-* a **Vec of u8** values that looks like this
+* Unicode Scalar Value
+
+* Grapheme Clusters
+
+Hindi word “नमस्ते” written in the Devanagari script is ultimately stored as...
+
+---
+
+class: left
+
+# Bytes
+
+* A **Vec of u8** values that looks like this
 
 ```rust
 [224, 164, 168, 224, 164, 174, 224, 164, 184, 224, 165, 141, 224, 164, 164,
 224, 165, 135]
 ```
 
-* **Unicode Scalar Values** 
+---
+
+class: left
+
+# **Unicode Scalar Values**
 
 ```rust
 ['न', 'म', 'स',  '्', 'त',  'े']
@@ -325,9 +361,10 @@ Hindi word “नमस्ते” written in the Devanagari script is ultimate
 * 4 and 6 are diacritics which don't make sense on their own
 
 ---
+
 class: left
 
-* **grapheme clusters** 
+# **grapheme clusters**
 
 ```rust
 ["न", "म", "स्", "ते"]
@@ -336,25 +373,28 @@ class: left
 This four letters that make up the Hindi word
 
 ---
+
 class: left
 
-# Indexing is a bad idea 
+# Indexing is a bad idea
 
 because...
 
 * it’s not clear the return type would be: a byte value, a character, a grapheme
-  cluster, or a string slice. 
+  cluster, or a string slice.
 
-* Indexing operations are expected to always take constant time (O(1)), but not 
+* Indexing operations are expected to always take constant time (O(1)), but not
   possible to guarantee
 
 ---
+
 class: left
 
 # Slicing Strings
 
-Rather than indexing using [] with a single number, you can use [] with a range 
-to create a string slice containing particular bytes
+Rather than indexing using `[]` with a single number
+
+Use `[]` with a range to create a string slice containing particular bytes
 
 ```rust
 let hello = "Здравствуйте";
@@ -368,17 +408,17 @@ let hello = "Здравствуйте";
 let s = &hello[0..1];
 ```
 
-Rust will panic at runtime in the same way that accessing an invalid index in 
-a vector does
+* Will panic at runtime in the same way accessing an invalid index in a vector does
 
-create string slices with caution, it can crash your program
+* create string slices with caution, it can crash your program
 
 ---
+
 class: left
 
 # Methods for Iterating Over Strings
 
-* `chars`
+### `chars`
 
 ```rust
 for c in "नमस्ते".chars() {
@@ -396,9 +436,10 @@ for c in "नमस्ते".chars() {
 ```
 
 ---
+
 class: left
 
-* `bytes`
+### `bytes`
 
 ```rust
 for b in "नमस्ते".bytes() {
@@ -421,13 +462,14 @@ Remember that valid Unicode scalar values may be made up of more than one byte
 functionality is not provided by the standard library, crates are available
 
 ---
+
 class: left
 
 # Summary
 
 * Strings Are Not So Simple
 
-* “strings” include `String` type and the string slice `&str` 
+* “strings” include `String` type and the string slice `&str`
 
 * They are `UTF-8` encoded
 
