--- a/static/md/9.0_Error_Handling.md
+++ b/static/md/9.0_Error_Handling.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 9.0
@@ -6,34 +5,37 @@ class: middle, center
 # Error Handling
 
 ---
+
 class: left
 
 # Error Handling
 
-Rust requires you to acknowledge the possibility of an error occurring 
-and take some action before your code will compile
+Rust requires you to acknowledge the possibility of an error occurring
+and take some action before your code compiles
 
 Two major categories
 
-  * Recoverable
+* Recoverable
 
-  * Unrecoverable
+* Unrecoverable
 
 Most Languages treat both of them in the same way, using exceptions
 
 ---
+
 class: left
 
 # Recoverable
 
-* Situations in which it’s reasonable to report the problem to the user 
+* Situations in which it’s reasonable to report the problem to the user
   and retry the operation
 
 * like a file not found error
 
 * Provides `Result<T, E>`
-  
+
 ---
+
 class: left
 
 # Unrecoverable
@@ -42,9 +44,10 @@ class: left
 
 * like trying to access a location beyond the end of an array
 
-* Provides `panic!` macro that stops execution on unrecoverable errors 
+* Provides `panic!` macro that stops execution on unrecoverable errors
 
 ---
+
 class: left
 
 # Summary
